--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-    <div class="container-fluid ">
+    <div class="container-fluid">
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">&times;</span> -->
           <!-- </button> -->
@@ -39,14 +39,27 @@
            <div class="blockquote-footer text-danger">a Front-End web developer</div>
            
        </div>
+      <div class="container text-center d-flex justify-content-center align-items-center">
+          <ul class="list-inline bg-warning rounded ">
+              <li class="list-inline-item">EMAIL : </li>
+              <li class="list-inline-item">pyuvasaikiran@gmail.com</li><br>
+              <li class="list-inline-item ">PHONE :</li>
+              <li class="list-inline-item">+91-6303886474</li><br>
+              <li class="list-inline-item">BIRTHDAY :</li>
+              <li class="list-inline-item">August 18,2002</li> 
+          </ul>
+      </div>
     </div>
-    <div class="container-fluid" id="about">
-        <h1 class="text-center text-info"><u>ABOUT</u></h1>
-        <div class="row">
-            <div class="col">MY SISTER NAME IS SNEHITHA</div>
-        </div>
-        <div class="row">
-            <div class="col">MY MOTHER NAME IS JAYALAKSHMI</div>
+   
+    <div class="container" id="about">
+        <h1 class="text-center text-info">ABOUT</h1>
+        <div class="container bg-light rounded">
+            <div class="row">
+                <div class="col">MY SISTER NAME IS SNEHITHA</div>
+            </div>
+            <div class="row">
+                <div class="col">MY MOTHER NAME IS JAYALAKSHMI</div>
+            </div>
         </div>
     </div>
 
