skills and projects updated

--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
           style="background-color: #0082ca;"
           href="https://www.linkedin.com/in/yuva-sai-kiran-171218218/"
           role="button"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
+          ><i class="fab fa-linkedin-in"></i></a>
         <!-- Github -->
         <a
           class="btn btn-primary btn-floating m-1"
@@ -334,7 +333,7 @@
       
     </div>
   </footer>
-  
+
   </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
