--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
        <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="container-fluid">
 
-    <footer class=" bg-white text-center text-white fixed-bottom">
+    <footer class=" bg-white text-center text-white position-relative">
     <!-- Grid container -->
     <div class="p-4 pb-0">
       <!-- Section: Social media -->
