--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Message*</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" required></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                     </div>
                     <div>
                         <input type="submit" class="btn btn-primary" value="Send Message">
@@ -277,7 +277,7 @@
         </div>
     
        <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container-fluid">
+<div class="container-fluid mt-5">
 
     <footer class=" bg-white text-center text-white position-relative">
     <!-- Grid container -->
