--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <!-- script file -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -253,24 +255,30 @@
                 </div>
             </div>
             
-            <div id="contact">
+            <div id="contact1">
                 <h1 class="text-center text-primary p-4">Contact Form</h1>
-                <form action="contact.php" method="post" enctype="text/plain">
+                <p id="returnmessage"></p>
+                <form id="form">
                     <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Name*</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter name" required>
+                        <label for="name" class="form-label">Name*</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email address*</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                        <label for="email" class="form-label">Email address*</label>
+                        <input type="text" class="form-control" id="email"
                             placeholder="name@gmail.com" required>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Message*</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" required></textarea>
+                        <label for="contact" class="form-label">Phone number*</label>
+                        <input type="text" class="form-control" id="contact"
+                             required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message*</label>
+                        <textarea class="form-control" id="message" rows="4" required></textarea>
                     </div>
                     <div>
-                        <input type="submit" class="btn btn-primary" value="Send Message">
+                        <input type="button" id ="submit" class="btn btn-primary" value="Send Message">
                 </form>
 
             </div>
