--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
             </div>
             
-            <div id="contact1">
+            <div id="contact">
                 <h1 class="text-center text-primary p-4">Contact Form</h1>
                 <p id="returnmessage"></p>
                 <form id="form">
@@ -269,16 +269,11 @@
                             placeholder="name@gmail.com" required>
                     </div>
                     <div class="mb-3">
-                        <label for="contact" class="form-label">Phone number*</label>
-                        <input type="text" class="form-control" id="contact"
-                             required>
-                    </div>
-                    <div class="mb-3">
                         <label for="message" class="form-label">Message*</label>
                         <textarea class="form-control" id="message" rows="4" required></textarea>
                     </div>
                     <div>
-                        <input type="button" id ="submit" class="btn btn-primary" value="Send Message">
+                        <input type="submit" id ="submit" class="btn btn-primary" value="Send Message">
                 </form>
 
             </div>
